# supabase-hackathon

./: .env.example  .gitignore  bun.lockb  drizzle.config.ts  env.js  next.config.ts  package.json  pnpm-lock.yaml  redis.ts  sf_datasets_progress.json  start-database.sh  tsconfig.tsbuildinfo
app/(chat)/: actions.ts  layout.tsx  page.tsx
app/(chat)/api/chat/: route.ts
components/: app-sidebar.tsx  chat-header.tsx  chat.tsx  icons.tsx  message-actions.tsx  message.tsx  multimodal-input.tsx  overview.tsx  table.tsx
data/: download_urls.txt  sf_datasets.json  sf_datasets_with_details.json  sf_datasets_with_downloads.json
data_scripts/: main.py
lib/: utils.ts
lib/ai/: index.ts  prompts.ts
lib/db/: duck.ts  queries.ts  schema.ts
python_scraper/: pyproject.toml
python_scraper/scraper/: main.py  scrape.py
python_scraper/scraper/utils/: llm.py  supabase.py  supabase_client.py  textract.py  utils.py  vectorizer.py
scripts/: backfill-missing-csv.ts  crawl.ts  download-urls.ts  parallel-upload.ts  parse-descriptions.ts  quack.ts
src/: env.js
src/app/: page.tsx
src/app/api/chat/: route.ts
src/components/: ChatInput.tsx  MessageList.tsx
src/server/api/: trpc.ts
src/server/db/: schema.ts
types/: data.ts
utils/: csv-processor.ts
utils/supabase/: admin.ts  middleware.ts  server.ts
