[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Jordan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.49.0"
pillow = "^11.0.0"
fitz = "^0.0.1.dev2"
openai = "^1.55.0"
pydantic = "^2.10.1"
supabase = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
